--- a/Mephist/Views/Employee/Components/EmployeeProfile/SmallProfile.cshtml
+++ b/Mephist/Views/Employee/Components/EmployeeProfile/SmallProfile.cshtml
@@ -16,7 +16,7 @@
     <td>
         <a asp-controller="Employee" asp-action="Details" asp-route-id="@Model.Id">@Model.FullName</a>
         <br />
-        <img src="@Model.GetAvatarPath()" style="height: 100px; " />
+        <img src="@Url.Content(Model.GetAvatarPath())" style="height: 200px; " />
 
     </td>
     <td>
