--- a/Mephist/Views/Home/Index.cshtml
+++ b/Mephist/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
 
 <br /><br /><br />
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Добро пожаловать на мифист!</h1>
+    <p>Мы находимся на начальной стадии разработки.</p>
 </div>
