--- a/Mephist/Views/Shared/_Layout.cshtml
+++ b/Mephist/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="0">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="ml-2 navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -41,6 +41,10 @@
 
             </ul>
 
+
+        </div>
+        <div>
+
             @if (signInManager.IsSignedIn(User))
             {
 
@@ -57,7 +61,6 @@
                 </div>
 
             }
-
         </div>
     </nav>
     <div class="container">
