--- a/Mephist/Views/Shared/_Layout.cshtml
+++ b/Mephist/Views/Shared/_Layout.cshtml
@@ -11,59 +11,93 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/lib/jqueryui/jquery-ui.min.css" />
     <link rel="stylesheet" href="~/bundles/site.min.css" />
+    <script src="https://kit.fontawesome.com/102cc95412.js" crossorigin="anonymous"></script>
     @RenderSection("stylesheets", false)
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="0">
+    <div class="container-fluid bg-light">
+        <div class="container-xxl">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <a class="navbar-brand" href="#">Mephist</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto topnav">
+                        <li class="nav-item"><a asp-controller="Employee" asp-action="Index" class="nav-link">Сотрудники</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Учебные материалы
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" asp-action="GetMaterials" asp-controller="EducationalMaterials">Все</a>
+                                <a class="dropdown-item" asp-action="GetLabJournals" asp-controller="EducationalMaterials">Лабораторные работы</a>
+                                <a class="dropdown-item" asp-action="AddMaterial" asp-controller="EducationalMaterials">Добавить</a>
+                            </div>
+                        </li>
+                        <li class="nav-item"><a href="#" class="nav-link">Кафедры</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Организации</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Репетиторы</a></li>
+                        @if (signInManager.IsSignedIn(User))
+                        {
+                    <li class="nav-item">
+                        <a asp-controller="Account" asp-action="Profile" class="nav-link">@userManager.GetUserAsync(User).Result.UserName</a>
+                    </li>
+                            <li class="nav-item">
+                                    <a asp-controller="Account" asp-action="Logout" class="btn btn-primary p-2 nav-link"><span class="text-white">Выйти</span></a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="mx-1 my-1">
+                                <a class="nav-link btn btn-outline-primary p-2" asp-controller="Account" asp-action="Login" asp-route-returnUrl="@ViewContext.ActionDescriptor.DisplayName">Войти</a>
+                            </li>
+                            <li class="mx-1 my-1">
+                                <a class="nav-link btn btn-primary p-2" asp-controller="Account" asp-action="Register"><span class="text-white">Зарегистрироваться</span></a>
+                            </li>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="ml-2 navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="col-6 col-md-3 col-xl-4  d-block">
-                <h1 class="mb-0 site-logo"><a asp-action="Index" asp-controller="Home" class="text-black h2 mb-0">mephist</a></h1>
-            </div>
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item"><a asp-controller="Employee" asp-action="Index" class="nav-link">Сотрудники</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Учебные материалы
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" asp-action="GetMaterials" asp-controller="EducationalMaterials">Все маетриалы</a>
-                        <a class="dropdown-item" asp-action="GetLabJournals" asp-controller="EducationalMaterials">Лабаратораные работы</a>
-                    </div>
-                </li>
-                <li class="nav-item"><a href="#" class="nav-link">Кафедры</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Расписание</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Организации</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Репетиторы</a></li>
-
-            </ul>
-
-
-        </div>
-        <div>
-
-            @if (signInManager.IsSignedIn(User))
-            {
-
-                <form method="post" class="form-inline" asp-controller="Account" asp-action="Logout">
-                    <a class="my-auto">@userManager.GetUserAsync(User).Result.UserName</a>
-                    <input class="btn" type="submit" value="Выйти" />
-                </form>
-            }
-            else
-            {
-                <div class="d-inline">
-                    <a class="mx-2" asp-controller="Account" asp-action="Login" asp-route-returnUrl="@ViewContext.ActionDescriptor.DisplayName">Войти</a>
-                    <a class="mx-2" asp-controller="Account" asp-action="Register">Зарегистрироваться</a>
+                        }
+                    </ul>
                 </div>
+            </nav>
+            <!--
+                    <nav class="navbar navbar-expand-lg navbar-light container-xxl">
+                    <button class="ml-2 navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-            }
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Учебные материалы
+                                </a>
+
+                            </li>
+
+
+                        </ul>
+                    </div>
+
+                </nav>
+                <div class="d-flex flex-row-reverse">
+
+
+
+                    <div class="p-2">
+                        <h1 class="site-logo">
+                            <a asp-action="Index" asp-controller="Home" class="text-black fs-2">mephist</a>
+                        </h1>
+                    </div>
+                </div>
+            </div>
+                -->
+
+
         </div>
-    </nav>
-    <div class="container">
+    </div>
+
+    <div class="container-xxl">
         @RenderBody()
     </div>
 
@@ -77,7 +111,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-t6I8D5dJmMXjCsRLhSzCltuhNZg6P10kE0m0nAncLUjH6GeYLhRU1zfLoW3QNQDF" crossorigin="anonymous"></script>
     <script src="~/bundles/site.min.js"></script>
-
 
     @RenderSection("scripts", false)
 </body>
