Правки во фронтенде

--- a/Mephist/Views/EducationalMaterials/AddMaterial.cshtml
+++ b/Mephist/Views/EducationalMaterials/AddMaterial.cshtml
@@ -11,7 +11,7 @@
 
 <h1>Добавление материала</h1>
 <span>* - обязательны для заполнения</span>
-<form method="post" id="add-material-form" asp-controller="EducationalMaterials" asp-action="AddMaterial" enctype="multipart/form-data">
+<form class="needs-validation" method="post" id="add-material-form" asp-controller="EducationalMaterials" asp-action="AddMaterial" enctype="multipart/form-data">
     <div asp-validation-summary="All" class="form-group"></div>
     <!--Тип-->
     <div id="type_block">
